Fix all broken links

--- a/src/content/docs/building-applications/build-a-dapp.mdx
+++ b/src/content/docs/building-applications/build-a-dapp.mdx
@@ -7,23 +7,20 @@ prev: false
 ## Why SKALE?
 ---
 
-- **[Zero Gas Fees](/building-applications/gas-fees):** Build on the ONLY decentralized blockchain network in the world with zero gas fees FOREVER.
-- **[Speed](/instant-finality):** SKALE offers the fastest Layer 1 Ethereum-compatible blockchain in the world. With instant finality and one (1) second blocktimes; it doesn't get much faster.
-- **[Scalability](/pick-a-chain):** It's in the name. Build on the only decentralized compute network designed to support you at every stage of your growth.
+- **[Zero Gas Fees](/building-applications/zero-gas-fees):** Build on the ONLY decentralized blockchain network in the world with zero gas fees FOREVER.
+- **Speed:** SKALE offers the fastest Layer 1 Ethereum-compatible blockchain in the world. With instant finality and one (1) second blocktimes; it doesn't get much faster.
+- **[Scalability](/building-applications/pick-a-chain):** It's in the name. Build on the only decentralized compute network designed to support you at every stage of your growth.
 - **[Full Support System](https://discord.gg/skale):** Through a combination of developer support, marketing support, and a robust grant program; SKALE is committed to helping decentralize and further the open internet.
 
 ---
 
 ## Native Features
 
-- **[Bridge](/skale-bridge/intro-to-bridging):** The SKALE Bridge allows for seamless and secure transfers of assets between Ethereum and SKALE as well as sChain to sChain. This is a critical feature for any dApp looking to leverage the benefits of both networks,
+- **[Bridge](/skale-bridge/overview):** The SKALE Bridge allows for seamless and secure transfers of assets between Ethereum and SKALE as well as sChain to sChain. This is a critical feature for any dApp looking to leverage the benefits of both networks,
 bring in liquidity, or migrate to SKALE. It's also the fastest decentralized bridge in the space.
 - **[Randomness](/building-applications/random-number-generation):** Secure and decentralized random number generation (RNG) is available on every SKALE Chain. No need to rely on third-party services or oracles any
 longer; access RNG (a VRF alternative) directly onchain instantly and for free.
-- **[Filestorage](/building-applications/filestorage):** Store files and even websites directly on a SKALE Chain. A great alternative to IPFS and other decentralized storage solutions for static files.
-- **[Oracle](/building-applications/oracle):** Access real-world data onchain with the SKALE Oracle or read directly off of other Ethereum Virtual Machine (EVM) based blockchains like Ethereum and use that
-information in your SKALE smart contracts.
-
+- **[Filestorage](/building-applications/using-filestorage):** Store files and even websites directly on a SKALE Chain. A great alternative to IPFS and other decentralized storage solutions for static files.
 ---
 
 ## The Space to Innovate
