--- a/src/content/docs/building-applications/libraries/filestorage-js.mdx
+++ b/src/content/docs/building-applications/libraries/filestorage-js.mdx
@@ -5,7 +5,7 @@ version: How to use Filestorage.js -- v1.0.1
 
 A JavaScript library for using SKALE Network's native and decentralized onchain filestorage.
 
-To learn more about filestorage, checkout the [Filestorage Deep Dive](/how-skale-works/filestorage). For an example of how to use filestorage, checkout [using filestorage](/building-applications/using-filestorage).
+For an example of how to use filestorage, checkout [using filestorage](/building-applications/using-filestorage).
 
 ## Overview
 
