--- a/src/content/docs/building-applications/using-filestorage.mdx
+++ b/src/content/docs/building-applications/using-filestorage.mdx
@@ -9,8 +9,6 @@ import stylesCssCode from "./code/styles.css?raw";
 import filestorageUploadCode from "./code/filestorageUploadScript?raw";
 
 SKALE Filestorage is the only onchain and decentralized filestorage in blockchain. The following walks through an example of how to use filestorage on your sChain.
-Interested in learning more about filestorage first? Checkout the [How Filestorage Works page](/how-skale-works/filestorage). If you are a SKALE Chain Owner or Operator,
-you can also see the [upgradeable contracts](/run-a-skale-chain/upgradeable-contracts) section to learn more about customizing your filestorage implementation. 
 
 ## Preparing Files
 
@@ -84,7 +82,7 @@ up to the SKALE Chain.
 
 ### 6. Access your website
 
-If using the [SKALE Proxy](/run-a-skale-chain/schain-rpcs), the following is your endpoint:
+The following is your endpoint:
 
 ```shell
 # Reverse Proxy Endpoint = mainnet.skalenodes.com
