--- a/src/content/docs/run-a-skale-chain/access-control.mdx
+++ b/src/content/docs/run-a-skale-chain/access-control.mdx
@@ -11,7 +11,7 @@ Access Control to a SKALE Chain is managed by the Config Controller smart contra
 
 
 <Aside type="note">
-If you encouter the error **Out of Gas** when trying to deploy a smart contract to a SKALE Chain; this likely means that the address is not allowed to deploy smart contracts and is missing deployer access. See [whitelisting an address](#whitelist).
+If you encouter the error **Out of Gas** when trying to deploy a smart contract to a SKALE Chain; this likely means that the address is not allowed to deploy smart contracts and is missing deployer access.
 </Aside>
 
 ## Access via Accounts
