--- a/src/content/docs/run-a-skale-node/overview.mdx
+++ b/src/content/docs/run-a-skale-node/overview.mdx
@@ -52,7 +52,7 @@ Ethereum mainnet to reward or slash supernodes according to their respective per
 ## Requirements
 
 To be added as a supernode to the SKALE Network, a prospective supernode must run the SKALE Admin, which manages all operations in the supernode and is
-installed with the [skale-node-cli](/ecosystem/validators/validator-cli). SKALE Admin evaluates the prospective supernode to ensure that it's upholding
+installed with the [SKALE Node CLI](/run-a-skale-node/node-cli/overview). SKALE Admin evaluates the prospective supernode to ensure that it's upholding
 network hardware requirements. If the prospective supernode passes this verification step, the SKALE Admin permits the supernode to submit a request
 to SKALE Manager to join the network. This request contains both the required network deposit as well as supernode metadata collected by the
 SKALE Daemon (for example IP address, port, public key, etc.).
