--- a/src/content/docs/skale-bridge/ethereum/bridge-erc721.mdx
+++ b/src/content/docs/skale-bridge/ethereum/bridge-erc721.mdx
@@ -142,7 +142,7 @@ SKALE's decentralized bridge offers a simple two-step process to bridge from any
 
 
 <Aside type="note">
-Gas Wallet, officially referred to as the community pool, is a smart contract on Ethereum that is used to handle exits from SKALE. Users pre-pay ETH into this contract which is then used to reimburse validators for the gas costs of the bridge cost back to Ethereum. Make sure users top up their [gas wallet](/skale-bridge/exit-to-ethereum) to ensure the bridge can succeed.
+Gas Wallet, officially referred to as the community pool, is a smart contract on Ethereum that is used to handle exits from SKALE. Users pre-pay ETH into this contract which is then used to reimburse validators for the gas costs of the bridge cost back to Ethereum. Make sure users top up their gas wallet to ensure the bridge can succeed.
 </Aside>
 
 #### Pre-pay for your Exit
