--- a/src/content/docs/skale-bridge/overview.mdx
+++ b/src/content/docs/skale-bridge/overview.mdx
@@ -30,7 +30,7 @@ Seamlessly migrate your existing Ethereum applications without code changes whil
 ## What is IMA? 
 
 SKALE's Interchain Messaging Agent (IMA) is a decentralized, high-performance message transport layer and bridging protocol.
-The unique design and flexiblity of IMA allows every SKALE Chain to be joined together into an interconnected web of blockchains that make up the SKALE Network. For more information on how IMA is designed, head over to [IMA Architecture](/skale-bridge/ima-architecture).
+The unique design and flexiblity of IMA allows every SKALE Chain to be joined together into an interconnected web of blockchains that make up the SKALE Network.
 
 ## 📚 Complete Bridging Guide
 
@@ -39,7 +39,6 @@ The unique design and flexiblity of IMA allows every SKALE Chain to be joined to
 - **[Bridge ERC-20 Tokens](/skale-bridge/ethereum/bridge-erc20)** - Move fungible tokens like USDC, WBTC, and more to a SKALE Chain
 - **[Bridge ERC-721 NFTs](/skale-bridge/ethereum/bridge-erc721)** - Seamlessly transfer unique digital assets to SKALE
 - **[Bridge ERC-1155 Tokens](/skale-bridge/ethereum/bridge-erc1155)** - Bring multi-token standard tokens to SKALE
-- **[Exit to Ethereum](/skale-bridge/ethereum/exit-to-ethereum)** - Secure withdrawal process back to Ethereum
 
 ### **Core Bridging SKALE Chain to SKALE Chain**
 - **[Bridge ERC-20 Tokens](/skale-bridge/skale/bridge-erc20)** - Move fungible tokens like USDC, WBTC, and more between SKALE Chains
@@ -50,12 +49,7 @@ The unique design and flexiblity of IMA allows every SKALE Chain to be joined to
 - **[Custom Contract Integration](/skale-bridge/messaging-layer/create-custom-contracts)** - Build multi-chain applications with ease
 - **[Connect Existing Contracts](/skale-bridge/messaging-layer/connect-custom-contracts)** - Connect multi-chain applications
 
-### **Technical Resources**
-- **[IMA Architecture](/skale-bridge/ima-architecture)** - Deep dive into IMAs unique design
-- **[Token Flows](./token-flows)** - Understand asset movement patterns across SKALE
-- **[Security Methods](./security-methods)** - Comprehensive security overview
-- **[IMA Limits](./ima-limits)** - Transaction limits and constraints
-- **[Token Availability](./token-availability)** - Existing Tokens 
+
 
 ### **Support & Troubleshooting**
-- **[Developer Support](https://discord.gg/skale)** - Get real-time technical assistance
+- **[Developer Support](https://discord.gg/skale)** - Get assistance from the SKALE Team
