--- a/src/content/docs/building-applications/using-contract-factories.mdx
+++ b/src/content/docs/building-applications/using-contract-factories.mdx
@@ -8,7 +8,7 @@ import factoryExampleCode from "./code/factory-example.sol?raw";
 
 ## Background
 
-For developers building on SKALE, it is important to understand how a SKALE Chain [permission layer](/how-skale-works/permission-layer) works for contract deployments and it's impact
+For developers building on SKALE, it is important to understand how a SKALE Chain the permission layer permission layer works for contract deployments and it's impact
 on your smart contract architecture. SKALE Chains are Layer 1 blockchains with a number of unique enhancements that give businesses and developers
 maximum flexiblity when desigining an application or ecoystem. The permission layer is enabled by default on all SKALE Chains and should be taken into account
 when designing smart contracts.
