--- a/src/content/docs/run-a-skale-node/compliance-requirements.mdx
+++ b/src/content/docs/run-a-skale-node/compliance-requirements.mdx
@@ -99,9 +99,7 @@ Example Response:
 
 ## Software
 
-Latest Mainnet software versions are defined here: 
-- [Mainnet Versions](#mainnetversions)
-- https://github.com/skalenetwork/skale-network/tree/master/releases
+Latest Mainnet software versions are defined [here](https://github.com/skalenetwork/skale-network/tree/master/releases):
 
 - Supernode software versions must be updated to the latest Denali requirements
 - SGXWallet software versions must be updated to the latest Denali requirements
