Add Sitemap, Fix Expressive Code Bug, Add robots.txt route

--- a/src/content/docs/run-a-skale-node/run-supernode.mdx
+++ b/src/content/docs/run-a-skale-node/run-supernode.mdx
@@ -510,7 +510,7 @@ import { PostRegistrationChecklist } from "../../../components/PostRegistrationC
 
     For the `{ENV_TYPE}` network .env will look like:
 
-    ```.env
+    ```txt
     CONTAINER_CONFIGS_STREAM=3.0.1
     DOCKER_LVMPY_STREAM=1.0.2-stable.0
     FILEBEAT_HOST=filebeat.mainnet.skalenodes.com:5000
