Fix Nonexistent Import Step

--- a/src/content/docs/run-a-skale-node/run-supernode.mdx
+++ b/src/content/docs/run-a-skale-node/run-supernode.mdx
@@ -2,7 +2,7 @@
 title: Validator Setup
 description: Setup Process for new SKALE Validator
 ---
-import { Step, Steps, Aside } from "@astrojs/starlight/components";
+import { Steps, Aside } from "@astrojs/starlight/components";
 import { PostRegistrationChecklist } from "../../../components/PostRegistrationChecklist";
 
 <Steps>
