--- a/src/content/docs/building-applications/pick-a-chain.mdx
+++ b/src/content/docs/building-applications/pick-a-chain.mdx
@@ -5,23 +5,20 @@ description: Understanding the different sChains available to developers
 
 ## What is a SKALE Chain?
 
-A SKALE Chain is a layer 1 blockchain running within the SKALE Network. It leverages the networks pool of validators for shared security,
-has zero gas fees, single-slot finality, and is incredibly powerful. The truth is that not every developer or project needs their own blockchain.
+A SKALE Chain is a layer 1 EVM compatible blockchain running within the SKALE Network. It leverages the networks pool of validators for shared security, has zero gas fees, single-slot finality, and is incredibly powerful.
 
-SKALE offers both shared and dedicated compute option to developers, similar to most cloud providers. Analogous to a utility company, you have the
-option to pick which makes the most sense for you.
+SKALE offers both shared and dedicated compute option to developers, similar to most cloud providers. Analogous to a utility company, you have the option to pick which makes the most sense for you.
 
 ### Shared Resources (a.k.a SKALE Hubs)
 
-The SKALE Hub chains are ideal for most developers starting out. These chains consume a large portion of every SKALE Supernode, offer hundreds of transactions per second,
-hundreds of gigabytes of decentralized storage, and can host hundreds if not thousands of applications operating in parallel.
+The SKALE Hub chains are ideal for most developers starting out. These chains consume a large portion of every SKALE Supernode, offer hundreds of transactions per second, hundreds of gigabytes of decentralized storage, and can host hundreds if not thousands of applications operating in parallel.
 
 The four (4) SKALE Hubs available today are:
 
 - Calypso: Consumer, Social, DePIN
-- Europa: DeFi & Liquidity
+- Europa: DeFi, RWAs, Stablecoins, Onchain Finance
 - Nebula: Gaming
-- Titan: Artificial Intelligence (AI) & Machine Learning (ML)
+- Titan: Artificial Intelligence (AI)
 
 Feel free to pick any of them when getting started on SKALE Testnet! If you are new to building on SKALE and aren't sure where to go
 join us in [Discord](https://discord.gg/skale) and chat with the Developer Success team! Interested in running a hub for a specific niche?
