--- a/src/content/docs/run-a-skale-chain/managing-sfuel-distribution.mdx
+++ b/src/content/docs/run-a-skale-chain/managing-sfuel-distribution.mdx
@@ -5,7 +5,7 @@ description: Options for distributing sFUEL to developers and users of your SKAL
 
 import { Aside, Tabs, TabItem } from "@astrojs/starlight/components";
 
-The default gas token of a SKALE Chain is SKALE Fuel (sFUEL). This gas token allows for a SKALE Chains to be fully Ethereum Virtual Machine (EVM) compatible while also offering [zero gas fees](/building-applications/zero-gas-fees) to developers and end-users. While [gasless transactions](/building-applications/gasless-transactions) are recommended for most applications due to simple management; SKALE Chains running with sFUEL active will need to ensure developers and/or end-users can access the gas token to execute transactions.
+The default gas token of a SKALE Chain is SKALE Fuel (sFUEL). This gas token allows for a SKALE Chains to be fully Ethereum Virtual Machine (EVM) compatible while also offering [zero gas fees](/building-applications/gas-fees) to developers and end-users. While gasless transactions are recommended for most applications due to simple management; SKALE Chains running with sFUEL active will need to ensure developers and/or end-users can access the gas token to execute transactions.
 
 ## Etherbase
 
