--- a/src/content/docs/run-a-skale-chain/pricing-and-payments.mdx
+++ b/src/content/docs/run-a-skale-chain/pricing-and-payments.mdx
@@ -40,7 +40,7 @@ SKALE utilizes a subscription-based pricing model, similar to cloud computing, u
 
 **Notes**
 - Payments occur on the [SKALE Europa Hub](https://portal.skale.space/chains/europa) and are due before on the 1st of each month.
-- The official paymaster smart contract is `0x0d66cA00CbAD4219734D7FDF921dD7Caadc1F78D`
+- The official paymaster smart contract is `[0x0d66cA00CbAD4219734D7FDF921dD7Caadc1F78D](https://elated-tan-skat.explorer.mainnet.skalenodes.com/address/0x0d66cA00CbAD4219734D7FDF921dD7Caadc1F78D)`
 
 ### Payment Guide
 1. Head over to https://portal.skale.space/chains
