--- a/src/content/docs/building-applications/build-a-dapp.mdx
+++ b/src/content/docs/building-applications/build-a-dapp.mdx
@@ -7,7 +7,7 @@ prev: false
 ## Why SKALE?
 ---
 
-- **[Zero Gas Fees](/building-applications/zero-gas-fees):** Build on the ONLY decentralized blockchain network in the world with zero gas fees FOREVER.
+- **[Zero Gas Fees](/building-applications/gas-fees):** Build on the ONLY decentralized blockchain network in the world with zero gas fees FOREVER.
 - **Speed:** SKALE offers the fastest Layer 1 Ethereum-compatible blockchain in the world. With instant finality and one (1) second blocktimes; it doesn't get much faster.
 - **[Scalability](/building-applications/pick-a-chain):** It's in the name. Build on the only decentralized compute network designed to support you at every stage of your growth.
 - **[Full Support System](https://discord.gg/skale):** Through a combination of developer support, marketing support, and a robust grant program; SKALE is committed to helping decentralize and further the open internet.
@@ -37,7 +37,7 @@ Builders are able to experiment and ship products that:
 - Replace traditional Web2 systems
 - Innovate and experiment on the cutting edge of blockchain
 
-With zero gas fees, a susinstabile economic model, and industry best speed; SKALE is the ideal place for developers serious about bring the world onchain.
+With zero gas fees, a sustainable economic model, and industry best speed; SKALE is the ideal place for developers serious about bring the world onchain.
 
 Today, the network is home to over [15 SKALE Chains](https://portal.skale.space/chains), over [100 projects](https://portal.skale.space/ecosystem) who have gone live into production, and over 300 projects actively building on SKALE.
 SKALE has become the go-to network for developers building onchain games like [Strayshot](https://www.strayshot.game) and artificial intelligence (AI) based applications like [Exorde](https://exorde.network).
