--- a/src/content/docs/welcome/chain-info.mdx
+++ b/src/content/docs/welcome/chain-info.mdx
@@ -87,7 +87,7 @@ Interested in your own SKALE Chain? Head over to the [SKALE Discord](https://dis
 
 ### IMA Bridge Contracts
 
-> The following contracts are deployed on Ethereum Mainnet.
+> The following contracts are deployed on Ethereum Mainnet. Learn more about the [SKALE Bridge here](/skale-bridge/overview).
 
 | Name | Address |
 | --- | --- |
@@ -123,7 +123,7 @@ Interested in your own SKALE Chain? Head over to the [SKALE Discord](https://dis
 | SchainsInternal | [0x836Df73065Cb143bdDF3106e46783d43C12C6012](https://etherscan.io/address/0x836Df73065Cb143bdDF3106e46783d43C12C6012) |
 | SkaleDKG | [0xfcc84F7b6d88d671C6a1841549c0b2E70110884f](https://etherscan.io/address/0xfcc84F7b6d88d671C6a1841549c0b2E70110884f) |
 | SkaleManager | [0x8b32F750966273cb6D804C02360F3E2743E2B511](https://etherscan.io/address/0x8b32F750966273cb6D804C02360F3E2743E2B511) |
-| SKL Tokne | [0x00c83aeCC790e8a4453e5dD3B0B4b3680501a7A7](https://etherscan.io/address/0x00c83aeCC790e8a4453e5dD3B0B4b3680501a7A7) |
+| SKL Token | [0x00c83aeCC790e8a4453e5dD3B0B4b3680501a7A7](https://etherscan.io/address/0x00c83aeCC790e8a4453e5dD3B0B4b3680501a7A7) |
 | SKALEVerifier | [0x32F50e2a898F14687f2a714D8b2D405317eB4641](https://etherscan.io/address/0x32F50e2a898F14687f2a714D8b2D405317eB4641) |
 | SlashingTable | [0x1a7bB775611b58375a3177Dcf3D8E4f7F6d2ed4B](https://etherscan.io/address/0x1a7bB775611b58375a3177Dcf3D8E4f7F6d2ed4B) |
 | TimeHelpers | [0x05946b1b80ce4DE235350d8955c5c751860D5399](https://etherscan.io/address/0x05946b1b80ce4DE235350d8955c5c751860D5399) |
