Update Discord LInks

--- a/src/content/docs/building-applications/using-filestorage.mdx
+++ b/src/content/docs/building-applications/using-filestorage.mdx
@@ -23,7 +23,7 @@ You will need:
 - Files (see next section)
 
 <Aside type="note">
-Storage space must be provided by a SKALE Chain owner. Please contact the SKALE Team in [Discord](https://skale.chat) for support.
+Storage space must be provided by a SKALE Chain owner. Please contact the SKALE Team in [Discord](https://discord.gg/skale) for support.
 </Aside>
 
 ## 1. Prepare Files
