--- a/src/content/docs/run-a-skale-node/run-supernode.mdx
+++ b/src/content/docs/run-a-skale-node/run-supernode.mdx
@@ -460,7 +460,7 @@ import { Steps, Aside } from "@astrojs/starlight/components";
     And take care when updating lvm2, iptables, iptables-persistent, and python.
     </Aside>
 
-    If you have any concerns or questions, please don't hesitate to reach out to SKALE Team leads on [Discord](http://skale.chat).
+    If you have any concerns or questions, please don't hesitate to reach out to SKALE Team leads on [Discord](http://discord.gg/skale).
 
     ### 3.3 Download Node CLI binary
 
